# Syntrix

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PLANA.md  PLANB_3TERMINAL.md  PLAN_3TERMINAL.md  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  terminalA.md  terminalAv0_2.md  terminalB.md  terminalBv0_2.md  terminalC.md  terminalCv0_2.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v03terminalA.md  v03terminalB.md  v03terminalC.md  v03terminalD.md
.planning/phases/01-css-foundation-design-system/: 01-01-PLAN.md  01-02-PLAN.md  01-CONTEXT.md  01-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
dashboard/: .env.example  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: DataTable.test.tsx  DataTable.tsx  DateRangePicker.tsx  DraftCard.test.tsx  DraftCard.tsx  EmptyState.tsx  FunnelChart.tsx  JudgmentBadge.tsx  LoadingSpinner.tsx  MetricCard.tsx  ProjectSelector.tsx  ScoreBadge.tsx  Sidebar.tsx  Toast.tsx  TopBar.tsx
dashboard/src/hooks/: useAnalytics.ts  useDisposable.ts  useExperiments.ts  useGPUTier.ts  useLeads.ts  usePerformanceMode.ts  usePipelineFlow.ts  useQueue.ts  (+6 more)
design-system/syntrix/: MASTER.md
docs/: architecture.md  cli-reference.md  config-reference.md  index.md  install.md  quickstart.md
docs/plans/: 2026-02-20-landing-page-design.md  2026-02-20-landing-page-impl.md  2026-02-20-v02-3terminal-design.md  2026-02-23-v03-design.md  2026-02-25-bridge-design.md  2026-02-25-bridge-impl.md  2026-02-25-final-scope-design.md  2026-02-25-final-scope-impl.md  2026-02-25-remotion-demo-video-design.md  2026-02-25-remotion-demo-video-impl.md  terminal1.md  terminal2.md  terminal3.md  terminal4.md  v03terminal2.md  v03terminal3.md
landing/: package-lock.json  package.json
projects/: salesense.yaml  spectra.yaml
src/signalops/: __init__.py  exceptions.py
tests/: conftest.py  test_cli.py
tests/fixtures/: eval_set.jsonl  tweets.json
tests/integration/: test_ab_pipeline.py  test_api_routes.py  test_batch_pipeline.py  test_collector.py  test_pipeline.py  test_rate_limits.py
tests/unit/: test_ab_analysis.py  test_ab_test.py  test_api_auth.py  test_api_schemas.py  test_async_client.py  test_batch.py  test_cache.py  test_config.py  test_connector_contract.py  test_connector_factory.py  test_credentials.py  test_dpo.py  test_drafter.py  test_engagement_polling.py  test_evaluator.py  test_exceptions.py  test_exporter.py  test_finetuned.py  test_judge.py  test_judge_factory.py  test_langfuse_integration.py  test_litellm_gateway.py  test_normalizer.py  test_notifications.py  test_notify_cli.py  test_orchestrator_notifications.py  test_outcome_tracker.py  test_pipeline_wiring.py  test_platform.py  test_rate_limiter.py  test_scorer.py  test_scoring_engine.py  test_scoring_plugins.py  test_sequence_engine.py  test_sequence_tables.py  test_setup_routes.py  test_stats.py  test_stream.py  test_twikit_connector.py  test_x_api_retry.py
video/: package-lock.json  package.json
video/src/: DemoVideo.tsx  Root.tsx
(+181 files in other folders)
