[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signalops"
version = "0.2.0"
description = "Agentic social lead finder + outreach workbench"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "StrangeStorm243"}]
keywords = ["social-selling", "lead-generation", "outreach", "x-api", "llm", "agentic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Typing :: Typed",
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "httpx>=0.27",
    "anthropic>=0.40",
    "openai>=1.50",
    "python-dotenv>=1.0",
    "redis>=5.0",
]

[project.urls]
Homepage = "https://github.com/StrangeStorm243-bit/Syntrix"
Repository = "https://github.com/StrangeStorm243-bit/Syntrix"
Issues = "https://github.com/StrangeStorm243-bit/Syntrix/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.11",
    "ruff>=0.6",
    "respx>=0.21",
    "types-PyYAML>=6.0",
    "scikit-learn>=1.4",
]
docs = [
    "mkdocs-material>=9.5",
]

[project.scripts]
signalops = "signalops.cli.main:cli"

[project.entry-points."signalops.scorers"]
keyword_boost = "signalops.scoring.keyword_boost:KeywordBoostPlugin"
account_age = "signalops.scoring.account_age:AccountAgePlugin"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
strict = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "joblib",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
